<resources>
    <string name="app_name">NYTimes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NY-Times</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_arts">Arts</string>
    <string name="menu_automobiles">Automobiles</string>
    <string name="menu_books">Books</string>
    <string name="menu_business">Business</string>
    <string name="menu_fashion">Fashion</string>
    <string name="menu_food">Food</string>
    <string name="menu_health">Health</string>
    <string name="menu_insider">Insider</string>
    <string name="menu_magazine">Magazine</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_national">National</string>
    <string name="menu_nyregion">Nyregion</string>
    <string name="menu_obituaries">Obituaries</string>
    <string name="menu_opinion">Opinion</string>
    <string name="menu_politics">Politics</string>
    <string name="menu_realestate">Real Estate</string>
    <string name="menu_science">Science</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_sundayreview">Sunday Review</string>
    <string name="menu_theater">Theater</string>
    <string name="menu_tmagazine">T-Magazine</string>
    <string name="menu_travel">Travel</string>
    <string name="menu_upshot">Upshot</string>
    <string name="menu_world">World</string>
</resources>
